--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^18.15.9",
     "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^4.0.0",
+    "less": "^4.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
